Fix touch handling on mobile

--- a/scss/components-review-panel.scss
+++ b/scss/components-review-panel.scss
@@ -83,6 +83,7 @@
     > .pass {
       background: transparent;
       -webkit-tap-highlight-color: transparent;
+      touch-action: none;
       outline: none;
       position: fixed;
 
